--- a/index.html
+++ b/index.html
@@ -13,14 +13,8 @@
 
     <!-- Освітлення -->
     <a-entity light="type: ambient; color: #AAA; intensity: 0.3"></a-entity>
-    <a-entity light="type: directional; color: #FFF; intensity: 0.8; cast-shadow: true;
-              shadow-camera-near: 2; shadow-camera-far: 20; shadow-map-width: 1024;
-              shadow-map-height: 1024; shadow-bias: -0.001" 
+    <a-entity light="type: directional; color: #FFF; intensity: 0.8; cast-shadow: true"
               position="-1 3 1" rotation="-45 0 0"></a-entity>
-    <a-entity light="type: directional; color: #FFF; intensity: 0.3" 
-              position="1 2 1" rotation="-20 30 0"></a-entity>
-    <a-entity light="type: point; color: #FFF; intensity: 0.6; distance: 8; decay: 1"
-              position="0 2.5 0"></a-entity>
 
     <!-- Оточення -->
     <a-sky color="#ECECEC"></a-sky>
@@ -34,38 +28,73 @@
         </a-entity>
     </a-entity>
 
-    <!-- VR Руки (контролери) -->
+    <!-- Контролери -->
     <a-entity hand-controls="hand: left; handModelStyle: lowPoly; color: #ffaaaa" super-hands></a-entity>
     <a-entity hand-controls="hand: right; handModelStyle: lowPoly; color: #aaaaff" super-hands></a-entity>
 
-    <!-- Комп'ютерний корпус -->
-    <a-entity id="case" 
-              gltf-model="#case-model" 
-              position="0 0.5 -2" 
-              scale="0.5 0.5 0.5"
-              grabbable
-              stretchable
-              hoverable
-              shadow="receive: true; cast: true"
-              class="clickable"
-              data-component="Корпус комп'ютера"
-              data-description="Захищає компоненти комп'ютера та забезпечує охолодження">
-        <a-text value="Case" position="0 -0.5 0" color="black" align="center"></a-text>
+    <!-- МОДЕЛІ КОМПОНЕНТІВ З НАПИСАМИ -->
+
+    <!-- CPU -->
+    <a-entity gltf-model="#cpu-model" position="-2 1 -2" scale="0.5 0.5 0.5"
+              class="clickable" grabbable hoverable stretchable
+              data-component="Процесор" data-description="Центральний процесор комп’ютера.">
+        <a-text value="CPU" align="center" color="black" position="0 0.6 0"></a-text>
+    </a-entity>
+
+    <!-- Материнська плата -->
+    <a-entity gltf-model="#motherboard-model" position="-1 1 -2" scale="0.5 0.5 0.5"
+              class="clickable" grabbable hoverable stretchable
+              data-component="Материнська плата" data-description="Основа для підключення всіх компонентів.">
+        <a-text value="Motherboard" align="center" color="black" position="0 0.6 0"></a-text>
+    </a-entity>
+
+    <!-- RAM -->
+    <a-entity gltf-model="#ram-model" position="0 1 -2" scale="0.5 0.5 0.5"
+              class="clickable" grabbable hoverable stretchable
+              data-component="Оперативна пам’ять" data-description="Тимчасове збереження даних.">
+        <a-text value="RAM" align="center" color="black" position="0 0.6 0"></a-text>
+    </a-entity>
+
+    <!-- GPU -->
+    <a-entity gltf-model="#gpu-model" position="1 1 -2" scale="0.5 0.5 0.5"
+              class="clickable" grabbable hoverable stretchable
+              data-component="Відеокарта" data-description="Обробка графіки та відео.">
+        <a-text value="GPU" align="center" color="black" position="0 0.6 0"></a-text>
+    </a-entity>
+
+    <!-- PSU -->
+    <a-entity gltf-model="#psu-model" position="2 1 -2" scale="0.5 0.5 0.5"
+              class="clickable" grabbable hoverable stretchable
+              data-component="Блок живлення" data-description="Постачає електроенергію компонентам.">
+        <a-text value="PSU" align="center" color="black" position="0 0.6 0"></a-text>
+    </a-entity>
+
+    <!-- HDD -->
+    <a-entity gltf-model="#hdd-model" position="-1 1 -3" scale="0.5 0.5 0.5"
+              class="clickable" grabbable hoverable stretchable
+              data-component="Жорсткий диск" data-description="Довготривале збереження даних.">
+        <a-text value="HDD" align="center" color="black" position="0 0.6 0"></a-text>
+    </a-entity>
+
+    <!-- FAN -->
+    <a-entity gltf-model="#fan-model" position="0 1 -3" scale="0.5 0.5 0.5"
+              class="clickable" grabbable hoverable stretchable
+              data-component="Вентилятор" data-description="Охолодження системи.">
+        <a-text value="Fan" align="center" color="black" position="0 0.6 0"></a-text>
+    </a-entity>
+
+    <!-- CASE -->
+    <a-entity gltf-model="#case-model" position="1 1 -3" scale="0.5 0.5 0.5"
+              class="clickable" grabbable hoverable stretchable
+              data-component="Корпус" data-description="Фізичний контейнер для компонентів.">
+        <a-text value="Case" align="center" color="black" position="0 0.6 0"></a-text>
     </a-entity>
 
     <!-- Інформаційна панель -->
-    <a-entity id="info-panel" position="1.5 1.5 -2" visible="false">
+    <a-entity id="info-panel" position="0 2 -2" visible="false">
         <a-plane color="#333" width="1.5" height="0.8" position="0 0 0" shadow="receive: true"></a-plane>
         <a-text id="component-name" value="" color="white" position="-0.7 0.3 0.01" width="1.4"></a-text>
         <a-text id="component-description" value="" color="white" position="-0.7 0 0.01" width="1.4" wrap-count="30"></a-text>
-    </a-entity>
-
-    <!-- Індикатор навантаження -->
-    <a-entity id="load-indicator" position="0 2 -1.5">
-        <a-text id="load-text" value="Навантаження: 0%" color="black" align="center"></a-text>
-        <a-plane id="load-bar" color="green" width="2" height="0.2" position="0 -0.2 0" shadow="receive: true">
-            <a-plane id="load-progress" color="lime" width="0" height="0.18" position="-1 0 0.01"></a-plane>
-        </a-plane>
     </a-entity>
 
     <!-- Ассети моделей -->
@@ -80,9 +109,9 @@
         <a-asset-item id="hdd-model" src="models/hdd.glb"></a-asset-item>
     </a-assets>
 
-    <!-- Скрипт -->
+    <!-- JS логіка -->
     <script>
-        // Інформація про компоненти
+        // Підказки при наведенні
         AFRAME.registerComponent('component-info', {
             init: function() {
                 this.el.addEventListener('hover-start', () => {
@@ -93,9 +122,9 @@
                         y: this.el.object3D.position.y,
                         z: this.el.object3D.position.z
                     });
-                    document.querySelector('#component-name').setAttribute('value', 
+                    document.querySelector('#component-name').setAttribute('value',
                         this.el.getAttribute('data-component'));
-                    document.querySelector('#component-description').setAttribute('value', 
+                    document.querySelector('#component-description').setAttribute('value',
                         this.el.getAttribute('data-description'));
                 });
                 this.el.addEventListener('hover-end', () => {
@@ -104,25 +133,12 @@
             }
         });
 
-        // Симуляція навантаження
-        let load = 0;
-        let loadDirection = 1;
-        setInterval(() => {
-            load += loadDirection * Math.random() * 5;
-            if (load > 100) { load = 100; loadDirection = -1; }
-            else if (load < 0) { load = 0; loadDirection = 1; }
-
-            document.querySelector('#load-text').setAttribute('value', `Навантаження: ${Math.round(load)}%`);
-            const progress = document.querySelector('#load-progress');
-            progress.setAttribute('width', (load / 100) * 2);
-            progress.setAttribute('color', load < 50 ? 'lime' : load < 80 ? 'yellow' : 'red');
-        }, 500);
-
-        // Активувати підказки для компонентів
+        // Ініціалізація
         document.querySelectorAll('.clickable').forEach(el => {
             el.setAttribute('component-info', '');
         });
     </script>
+
 </a-scene>
 </body>
 </html>
