--- a/index.html
+++ b/index.html
@@ -32,125 +32,67 @@
     <a-entity hand-controls="hand: left" oculus-touch-controls="hand: left" super-hands></a-entity>
     <a-entity hand-controls="hand: right" oculus-touch-controls="hand: right" super-hands></a-entity>
 
-    <!-- МОДЕЛІ КОМПОНЕНТІВ -->
-    <!-- CPU -->
-    <a-entity id="cpu" 
-              gltf-model="#cpu-model" 
-              position="-2 1 -2" 
-              scale="0.5 0.5 0.5"
-              class="clickable" 
-              grabbable 
-              hoverable 
-              stretchable
-              shadow="receive: true; cast: true"
-              data-component="Процесор" 
-              data-description="Центральний процесор комп'ютера">
-        <a-text value="CPU" align="center" color="black" position="0 0.6 0"></a-text>
+    <!-- КОМПОНЕНТИ КОМП'ЮТЕРА В КОРПУСІ -->
+    
+    <!-- CASE (корпус - великий контейнер) -->
+    <a-entity id="case" gltf-model="#case-model" position="0 1 -3" scale="1 1 1"
+              shadow="receive: true; cast: true">
     </a-entity>
 
-    <!-- Материнська плата -->
-    <a-entity id="motherboard" 
-              gltf-model="#motherboard-model" 
-              position="-1 1 -2" 
-              scale="0.5 0.5 0.5"
-              class="clickable" 
-              grabbable 
-              hoverable 
-              stretchable
+    <!-- Материнська плата (на задній стінці) -->
+    <a-entity id="motherboard" gltf-model="#motherboard-model" position="0 1.4 -3.05" rotation="0 0 0" scale="0.8 1.2 0.05"
+              class="clickable" grabbable hoverable stretchable
               shadow="receive: true; cast: true"
-              data-component="Материнська плата" 
-              data-description="Основа для підключення всіх компонентів">
-        <a-text value="Motherboard" align="center" color="black" position="0 0.6 0"></a-text>
+              data-component="Материнська плата" data-description="Основа для підключення всіх компонентів.">
+        <a-text value="Motherboard" align="center" color="black" position="0 0.6 0.1"></a-text>
     </a-entity>
 
-    <!-- RAM -->
-    <a-entity id="ram" 
-              gltf-model="#ram-model" 
-              position="0 1 -2" 
-              scale="0.5 0.5 0.5"
-              class="clickable" 
-              grabbable 
-              hoverable 
-              stretchable
+    <!-- CPU (на центрі материнки) -->
+    <a-entity id="cpu" gltf-model="#cpu-model" position="0 1.4 -2.9" scale="0.15 0.15 0.15"
+              class="clickable" grabbable hoverable stretchable
               shadow="receive: true; cast: true"
-              data-component="Оперативна пам'ять" 
-              data-description="Тимчасове збереження даних">
-        <a-text value="RAM" align="center" color="black" position="0 0.6 0"></a-text>
+              data-component="Процесор" data-description="Центральний процесор комп'ютера.">
+        <a-text value="CPU" align="center" color="black" position="0 0.25 0"></a-text>
     </a-entity>
 
-    <!-- GPU -->
-    <a-entity id="gpu" 
-              gltf-model="#gpu-model" 
-              position="1 1 -2" 
-              scale="0.5 0.5 0.5"
-              class="clickable" 
-              grabbable 
-              hoverable 
-              stretchable
+    <!-- GPU (горизонтально) -->
+    <a-entity id="gpu" gltf-model="#gpu-model" position="0 1.1 -2.8" scale="0.6 0.2 0.15" rotation="0 0 0"
+              class="clickable" grabbable hoverable stretchable
               shadow="receive: true; cast: true"
-              data-component="Відеокарта" 
-              data-description="Обробка графіки та відео">
-        <a-text value="GPU" align="center" color="black" position="0 0.6 0"></a-text>
+              data-component="Відеокарта" data-description="Обробка графіки та відео.">
+        <a-text value="GPU" align="center" color="black" position="0 0.3 0"></a-text>
     </a-entity>
 
-    <!-- PSU -->
-    <a-entity id="psu" 
-              gltf-model="#psu-model" 
-              position="2 1 -2" 
-              scale="0.5 0.5 0.5"
-              class="clickable" 
-              grabbable 
-              hoverable 
-              stretchable
+    <!-- RAM (вертикальна смужка) -->
+    <a-entity id="ram" gltf-model="#ram-model" position="0.4 1.4 -2.9" scale="0.05 0.6 0.15" rotation="0 0 0"
+              class="clickable" grabbable hoverable stretchable
               shadow="receive: true; cast: true"
-              data-component="Блок живлення" 
-              data-description="Постачає електроенергію компонентам">
+              data-component="Оперативна пам'ять" data-description="Тимчасове збереження даних.">
+        <a-text value="RAM" align="center" color="black" position="0 0.5 0.1"></a-text>
+    </a-entity>
+
+    <!-- PSU (великий блок внизу зліва) -->
+    <a-entity id="psu" gltf-model="#psu-model" position="-0.4 0.5 -3" scale="0.5 0.5 0.5"
+              class="clickable" grabbable hoverable stretchable
+              shadow="receive: true; cast: true"
+              data-component="Блок живлення" data-description="Постачає електроенергію компонентам.">
         <a-text value="PSU" align="center" color="black" position="0 0.6 0"></a-text>
     </a-entity>
 
-    <!-- HDD -->
-    <a-entity id="hdd" 
-              gltf-model="#hdd-model" 
-              position="-1 1 -3" 
-              scale="0.5 0.5 0.5"
-              class="clickable" 
-              grabbable 
-              hoverable 
-              stretchable
+    <!-- HDD (внизу праворуч) -->
+    <a-entity id="hdd" gltf-model="#hdd-model" position="0.5 0.3 -3" scale="0.3 0.2 0.4"
+              class="clickable" grabbable hoverable stretchable
               shadow="receive: true; cast: true"
-              data-component="Жорсткий диск" 
-              data-description="Довготривале збереження даних">
-        <a-text value="HDD" align="center" color="black" position="0 0.6 0"></a-text>
+              data-component="Жорсткий диск" data-description="Довготривале збереження даних.">
+        <a-text value="HDD" align="center" color="black" position="0 0.3 0"></a-text>
     </a-entity>
 
-    <!-- FAN -->
-    <a-entity id="fan" 
-              gltf-model="#fan-model" 
-              position="0 1 -3" 
-              scale="0.5 0.5 0.5"
-              class="clickable" 
-              grabbable 
-              hoverable 
-              stretchable
+    <!-- FAN (у верхньому лівому куті корпусу) -->
+    <a-entity id="fan" gltf-model="#fan-model" position="-0.5 2.0 -3" scale="0.3 0.3 0.3"
+              class="clickable" grabbable hoverable stretchable
               shadow="receive: true; cast: true"
-              data-component="Вентилятор" 
-              data-description="Охолодження системи">
-        <a-text value="Fan" align="center" color="black" position="0 0.6 0"></a-text>
-    </a-entity>
-
-    <!-- CASE -->
-    <a-entity id="case" 
-              gltf-model="#case-model" 
-              position="1 1 -3" 
-              scale="0.5 0.5 0.5"
-              class="clickable" 
-              grabbable 
-              hoverable 
-              stretchable
-              shadow="receive: true; cast: true"
-              data-component="Корпус" 
-              data-description="Фізичний контейнер для компонентів">
-        <a-text value="Case" align="center" color="black" position="0 0.6 0"></a-text>
+              data-component="Вентилятор" data-description="Охолодження системи.">
+        <a-text value="Fan" align="center" color="black" position="0 0.3 0"></a-text>
     </a-entity>
 
     <!-- Інформаційна панель -->
