--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>VR Комп'ютерна Архітектура</title>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-super-hands-component@3.0.1/dist/aframe-super-hands.min.js"></script>
@@ -15,18 +15,14 @@
     <a-entity light="type: directional; color: #FFF; intensity: 0.8; cast-shadow: true"
               position="-1 3 1" rotation="-45 0 0"></a-entity>
 
-    <!-- Координатна сітка невеликого розміру -->
-    <a-grid-helper size="10" divisions="10" position="0 0 0" visible="true"></a-grid-helper>
-    <!-- Якщо у твоїй версії A-Frame немає <a-grid-helper>, можна замінити на простий plane: -->
-    <!--
+    <!-- Координатна сітка (plane) -->
     <a-plane rotation="-90 0 0" width="10" height="10" color="#ddd" position="0 0 0" static-body></a-plane>
-    -->
 
-    <!-- Камера з рухом за стіками -->
-    <a-entity id="player" movement-controls="speed: 0.1">
-        <a-entity id="camera" 
-                  camera="active: true" 
-                  position="0 1.6 3"
+    <!-- Камера + рух на стик контролера -->
+    <a-entity id="player" movement-controls="speed: 0.1; controls: gamepad, keyboard, wasd; fly: false">
+        <a-entity id="camera"
+                  camera="active: true"
+                  position="0 1.6 0"
                   look-controls="pointerLockEnabled: false">
         </a-entity>
     </a-entity>
