--- a/index.html
+++ b/index.html
@@ -1,122 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>VR Комп'ютерна Архітектура</title>
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
   <script src="https://unpkg.com/aframe-super-hands-component@3.0.1/dist/aframe-super-hands.min.js"></script>
   <script src="https://unpkg.com/aframe-physics-system@4.0.1/dist/aframe-physics-system.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
+  <script src="https://unpkg.com/aframe-teleport-controls@0.4.0/dist/aframe-teleport-controls.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/mayognaise/aframe-gridhelper@master/dist/aframe-gridhelper.min.js"></script>
 </head>
 <body>
 <a-scene physics="debug: false" vr-mode-ui="enabled: true" shadow="type: pcfsoft" renderer="colorManagement: true">
-
+  
   <!-- Освітлення -->
   <a-entity light="type: ambient; color: #AAA; intensity: 0.4"></a-entity>
   <a-entity light="type: directional; color: #FFF; intensity: 0.8; cast-shadow: true"
             position="-1 3 1" rotation="-45 0 0"></a-entity>
 
-  <!-- Площина (координатна сітка) -->
-  <a-grid-helper position="0 0 0" rotation="-90 0 0" width="10" height="10" step="1" color="#ccc"></a-grid-helper>
-  <!-- Якщо немає a-grid-helper (застаріло), заміни на: -->
-  <!--<a-plane rotation="-90 0 0" width="10" height="10" color="#ddd"></a-plane>-->
+  <!-- Координатна сітка -->
+  <a-entity gridhelper="size: 100; divisions: 100; colorCenterLine: #888; colorGrid: #ccc"
+            position="0 0.01 0"></a-entity>
 
-  <!-- Рухомий гравець (rig) -->
-  <a-entity id="player" position="0 0 0" movement-controls="speed: 0.15; controls: gamepad, keyboard, wasd" 
-            wasd-controls-enabled="true" gamepad-controls-enabled="true">
-    <a-entity id="camera" camera look-controls position="0 1.6 0"></a-entity>
+  <!-- Земля -->
+  <a-plane id="ground" class="teleportable" rotation="-90 0 0" width="100" height="100"
+           color="#7BC8A4" static-body shadow="receive: true"></a-plane>
+
+  <!-- Камера та пересування -->
+  <a-entity id="player" position="0 0 3">
+    <a-entity id="rig" movement-controls="speed: 0.1">
+      <a-entity id="camera" camera position="0 1.6 0" look-controls wasd-controls></a-entity>
+
+      <!-- Руки з телепортацією -->
+      <a-entity id="left-hand"
+                laser-controls="hand: left"
+                teleport-controls="cameraRig: #rig; teleportOrigin: #camera; button: trigger; collisionEntities: #ground"
+                raycaster="objects: .teleportable"
+                thumbstick-controls
+                super-hands></a-entity>
+
+      <a-entity id="right-hand"
+                laser-controls="hand: right"
+                teleport-controls="cameraRig: #rig; teleportOrigin: #camera; button: trigger; collisionEntities: #ground"
+                raycaster="objects: .teleportable"
+                thumbstick-controls
+                super-hands></a-entity>
+    </a-entity>
   </a-entity>
 
-  <!-- Контролери рук -->
-  <a-entity hand-controls="hand: left" oculus-touch-controls="hand: left" super-hands></a-entity>
-  <a-entity hand-controls="hand: right" oculus-touch-controls="hand: right" super-hands></a-entity>
-
-  <!-- Моделі -->
-
-  <!-- CASE -->
-  <a-entity id="case"
-            gltf-model="#case-model"
-            position="0 0 -2"
-            shadow="receive: true; cast: true"
-            static-body
-            data-component="Корпус"
-            data-description="Фізичний контейнер для компонентів">
+  <!-- Моделі (всі в одному місці: 0 0 -2) -->
+  <a-entity id="case" gltf-model="#case-model" position="0 0 -2" static-body shadow
+            grabbable class="clickable"
+            data-component="Корпус" data-description="Фізичний контейнер для компонентів">
     <a-text value="Case" align="center" color="black" position="0 0 0"></a-text>
   </a-entity>
 
-  <!-- MOTHERBOARD -->
-  <a-entity id="motherboard"
-            gltf-model="#motherboard-model"
-            position="0 0 -2"
-            class="clickable"
+  <a-entity id="motherboard" gltf-model="#motherboard-model" position="0 0 -2" class="clickable"
             grabbable hoverable stretchable dynamic-body
-            data-component="Материнська плата"
-            data-description="Основа для підключення всіх компонентів">
+            data-component="Материнська плата" data-description="Основа для підключення всіх компонентів">
     <a-text value="Motherboard" align="center" color="black" position="0 0 0" scale="0.5 0.5 0.5"></a-text>
   </a-entity>
 
-  <!-- CPU -->
-  <a-entity id="cpu"
-            gltf-model="#cpu-model"
-            position="0 0 -2"
-            class="clickable"
+  <a-entity id="cpu" gltf-model="#cpu-model" position="0 0 -2" class="clickable"
             grabbable hoverable stretchable dynamic-body
-            data-component="Процесор"
-            data-description="Центральний процесор комп'ютера">
+            data-component="Процесор" data-description="Центральний процесор комп'ютера">
     <a-text value="CPU" align="center" color="black" position="0 0 0" scale="0.5 0.5 0.5"></a-text>
   </a-entity>
 
-  <!-- RAM -->
-  <a-entity id="ram"
-            gltf-model="#ram-model"
-            position="0 0 -2"
-            class="clickable"
+  <a-entity id="ram" gltf-model="#ram-model" position="0 0 -2" class="clickable"
             grabbable hoverable stretchable dynamic-body
-            data-component="Оперативна пам'ять"
-            data-description="Тимчасове збереження даних">
+            data-component="Оперативна пам'ять" data-description="Тимчасове збереження даних">
     <a-text value="RAM" align="center" color="black" position="0 0 0" scale="0.5 0.5 0.5"></a-text>
   </a-entity>
 
-  <!-- GPU -->
-  <a-entity id="gpu"
-            gltf-model="#gpu-model"
-            position="0 0 -2"
-            class="clickable"
+  <a-entity id="gpu" gltf-model="#gpu-model" position="0 0 -2" class="clickable"
             grabbable hoverable stretchable dynamic-body
-            data-component="Відеокарта"
-            data-description="Обробка графіки та відео">
+            data-component="Відеокарта" data-description="Обробка графіки та відео">
     <a-text value="GPU" align="center" color="black" position="0 0 0" scale="0.5 0.5 0.5"></a-text>
   </a-entity>
 
-  <!-- PSU -->
-  <a-entity id="psu"
-            gltf-model="#psu-model"
-            position="0 0 -2"
-            class="clickable"
+  <a-entity id="psu" gltf-model="#psu-model" position="0 0 -2" class="clickable"
             grabbable hoverable stretchable dynamic-body
-            data-component="Блок живлення"
-            data-description="Постачає електроенергію компонентам">
+            data-component="Блок живлення" data-description="Постачає електроенергію компонентам">
     <a-text value="PSU" align="center" color="black" position="0 0 0" scale="0.5 0.5 0.5"></a-text>
   </a-entity>
 
-  <!-- HDD -->
-  <a-entity id="hdd"
-            gltf-model="#hdd-model"
-            position="0 0 -2"
-            class="clickable"
+  <a-entity id="hdd" gltf-model="#hdd-model" position="0 0 -2" class="clickable"
             grabbable hoverable stretchable dynamic-body
-            data-component="Жорсткий диск"
-            data-description="Довготривале збереження даних">
+            data-component="Жорсткий диск" data-description="Довготривале збереження даних">
     <a-text value="HDD" align="center" color="black" position="0 0 0" scale="0.5 0.5 0.5"></a-text>
   </a-entity>
 
-  <!-- FAN -->
-  <a-entity id="fan"
-            gltf-model="#fan-model"
-            position="0 0 -2"
-            class="clickable"
+  <a-entity id="fan" gltf-model="#fan-model" position="0 0 -2" class="clickable"
             grabbable hoverable stretchable dynamic-body
-            data-component="Вентилятор"
-            data-description="Охолодження системи">
+            data-component="Вентилятор" data-description="Охолодження системи">
     <a-text value="Fan" align="center" color="black" position="0 0 0" scale="0.5 0.5 0.5"></a-text>
   </a-entity>
 
@@ -139,6 +116,7 @@
     <a-asset-item id="hdd-model" src="models/hdd.glb"></a-asset-item>
   </a-assets>
 
+  <!-- JS логіка -->
   <script>
     AFRAME.registerComponent('component-info', {
       init: function () {
@@ -161,9 +139,10 @@
       }
     });
 
-    // Додати компонент info до всіх клікованих елементів
-    document.querySelectorAll('.clickable').forEach(el => {
-      el.setAttribute('component-info', '');
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelectorAll('.clickable').forEach(el => {
+        el.setAttribute('component-info', '');
+      });
     });
   </script>
 </a-scene>
