--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <a-entity light="type: directional; color: #FFF; intensity: 0.8; cast-shadow: true"
             position="-1 3 1" rotation="-45 0 0"></a-entity>
 
-  <!-- Координатна сітка -->
-  <a-entity gridhelper="size: 100; divisions: 100; colorCenterLine: #888; colorGrid: #ccc"
+  <!-- Менша координатна сітка -->
+  <a-entity gridhelper="size: 10; divisions: 10; colorCenterLine: #888; colorGrid: #ccc"
             position="0 0.01 0"></a-entity>
 
   <!-- Земля -->
