--- a/index.html
+++ b/index.html
@@ -28,22 +28,20 @@
 
   <!-- Камера та пересування -->
   <a-entity id="player" position="0 0 3">
-    <a-entity id="rig" movement-controls="speed: 0.1">
-      <a-entity id="camera" camera position="0 1.6 0" look-controls wasd-controls></a-entity>
+    <a-entity id="rig" thumbstick-controls>
+      <a-entity id="camera" camera position="0 1.6 0" look-controls></a-entity>
 
       <!-- Руки з телепортацією -->
       <a-entity id="left-hand"
                 laser-controls="hand: left"
                 teleport-controls="cameraRig: #rig; teleportOrigin: #camera; button: trigger; collisionEntities: #ground"
                 raycaster="objects: .teleportable"
-                thumbstick-controls
                 super-hands></a-entity>
 
       <a-entity id="right-hand"
                 laser-controls="hand: right"
                 teleport-controls="cameraRig: #rig; teleportOrigin: #camera; button: trigger; collisionEntities: #ground"
                 raycaster="objects: .teleportable"
-                thumbstick-controls
                 super-hands></a-entity>
     </a-entity>
   </a-entity>
