--- a/index.html
+++ b/index.html
@@ -26,22 +26,24 @@
   <a-plane id="ground" class="teleportable" rotation="-90 0 0" width="100" height="100"
            color="#7BC8A4" static-body shadow="receive: true"></a-plane>
 
-  <!-- Камера та пересування -->
+  <!-- Камера та рух стіком -->
   <a-entity id="player" position="0 0 3">
-    <a-entity id="rig" thumbstick-controls>
+    <a-entity id="rig" movement-controls="enabled: false" gamepad-controls="enabled: true; acceleration: 25; fly: false">
       <a-entity id="camera" camera position="0 1.6 0" look-controls></a-entity>
 
-      <!-- Руки з телепортацією -->
+      <!-- Моделі рук замість контролерів -->
       <a-entity id="left-hand"
-                laser-controls="hand: left"
+                hand-controls="hand: left; handModelStyle: lowPoly; color: #ffcccc"
                 teleport-controls="cameraRig: #rig; teleportOrigin: #camera; button: trigger; collisionEntities: #ground"
                 raycaster="objects: .teleportable"
+                thumbstick-controls
                 super-hands></a-entity>
 
       <a-entity id="right-hand"
-                laser-controls="hand: right"
+                hand-controls="hand: right; handModelStyle: lowPoly; color: #ccffcc"
                 teleport-controls="cameraRig: #rig; teleportOrigin: #camera; button: trigger; collisionEntities: #ground"
                 raycaster="objects: .teleportable"
+                thumbstick-controls
                 super-hands></a-entity>
     </a-entity>
   </a-entity>
