--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
     <a-entity id="rig" movement-controls="enabled: false" gamepad-controls="enabled: true; acceleration: 25; fly: false">
       <a-entity id="camera" camera position="0 1.6 0" look-controls></a-entity>
 
-      <!-- Моделі рук замість контролерів -->
+      <!-- Руки з телепортацією -->
       <a-entity id="left-hand"
-                hand-controls="hand: left; handModelStyle: lowPoly; color: #ffcccc"
+                laser-controls="hand: left"
                 teleport-controls="cameraRig: #rig; teleportOrigin: #camera; button: trigger; collisionEntities: #ground"
                 raycaster="objects: .teleportable"
                 thumbstick-controls
                 super-hands></a-entity>
 
       <a-entity id="right-hand"
-                hand-controls="hand: right; handModelStyle: lowPoly; color: #ccffcc"
+                laser-controls="hand: right"
                 teleport-controls="cameraRig: #rig; teleportOrigin: #camera; button: trigger; collisionEntities: #ground"
                 raycaster="objects: .teleportable"
                 thumbstick-controls
@@ -49,6 +49,8 @@
   </a-entity>
 
   <!-- Моделі (всі в одному місці: 0 0 -2) -->
+  <!-- [моделі не змінювалися, залишаються як є] -->
+  
   <a-entity id="case" gltf-model="#case-model" position="0 0 -2" static-body shadow
             grabbable class="clickable"
             data-component="Корпус" data-description="Фізичний контейнер для компонентів">
