--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <a-plane id="ground" class="teleportable" rotation="-90 0 0" width="100" height="100"
            color="#7BC8A4" static-body shadow="receive: true"></a-plane>
 
-  <!-- Камера та рух стіком -->
+  <!-- Камера та пересування -->
   <a-entity id="player" position="0 0 3">
-    <a-entity id="rig" movement-controls="enabled: false" gamepad-controls="enabled: true; acceleration: 25; fly: false">
+    <a-entity id="rig" thumbstick-controls>
       <a-entity id="camera" camera position="0 1.6 0" look-controls></a-entity>
 
       <!-- Руки з телепортацією -->
@@ -36,21 +36,17 @@
                 laser-controls="hand: left"
                 teleport-controls="cameraRig: #rig; teleportOrigin: #camera; button: trigger; collisionEntities: #ground"
                 raycaster="objects: .teleportable"
-                thumbstick-controls
                 super-hands></a-entity>
 
       <a-entity id="right-hand"
                 laser-controls="hand: right"
                 teleport-controls="cameraRig: #rig; teleportOrigin: #camera; button: trigger; collisionEntities: #ground"
                 raycaster="objects: .teleportable"
-                thumbstick-controls
                 super-hands></a-entity>
     </a-entity>
   </a-entity>
 
   <!-- Моделі (всі в одному місці: 0 0 -2) -->
-  <!-- [моделі не змінювалися, залишаються як є] -->
-  
   <a-entity id="case" gltf-model="#case-model" position="0 0 -2" static-body shadow
             grabbable class="clickable"
             data-component="Корпус" data-description="Фізичний контейнер для компонентів">
