--- a/index.html
+++ b/index.html
@@ -18,14 +18,9 @@
     <!-- Координатна сітка (plane) -->
     <a-plane rotation="-90 0 0" width="10" height="10" color="#ddd" position="0 0 0" static-body></a-plane>
 
-    <!-- Камера + рух на стик контролера -->
-    <a-entity id="player" position="0 0 0">
-        <a-camera
-            position="0 1.6 0"
-            look-controls="pointerLockEnabled: false"
-            wasd-controls="enabled: false"
-            gamepad-controls="enabled: true; controller: 0; deadzone: 0.2; acceleration: 20">
-        </a-camera>
+    <!-- Камера + рух лише на стик контролера -->
+    <a-entity id="player" movement-controls="controls: gamepad; fly: false; speed: 0.1">
+        <a-camera position="0 1.6 0" look-controls="pointerLockEnabled: false"></a-camera>
     </a-entity>
 
     <!-- Контролери з можливістю брати предмети -->
